--- a/.env
+++ b/.env
@@ -2,7 +2,12 @@ PORT=5000
 
 CLIENT_URL=http://localhost:1927
 
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=localhost
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=140781
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=kotlotorg.com.ua@gmail.com
+SMTP_PASSWORD=lawtiktdxgxtzfab
