--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ CLIENT_URL=http://localhost:1927
 POSTGRES_HOST=localhost
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=140781
+POSTGRES_PASSWORD=
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=kotlotorg.com.ua@gmail.com
+SMTP_USER=
 SMTP_PASSWORD=lawtiktdxgxtzfab
