Activation and Login

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=kotlotorg.com.ua@gmail.com
 SMTP_PASSWORD=lawtiktdxgxtzfab
+
+JWT_ACCESS_SECRET=thisisverysecretaccess
+
