--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "server-api",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name" : "server-api",
+  "type" : "module",
+  "version" : "1.0.0",
+  "description" : "",
+  "main" : "src/index.js",
+  "scripts" : {
+    "start" : "nodemon src/index.js",
+    "test" : "echo \"Error: no test specified\" && exit 1",
+    "lint" : "eslint --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.1",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.0"
+  "keywords" : [],
+  "author" : "",
+  "license" : "ISC",
+  "dependencies" : {
+    "cors" : "^2.8.5",
+    "dotenv" : "^16.0.3",
+    "express" : "^4.18.2",
+    "jsonwebtoken" : "^9.0.0",
+    "nodemailer" : "^6.9.1",
+    "pg" : "^8.10.0",
+    "pg-hstore" : "^2.3.4",
+    "sequelize" : "^6.31.0",
+    "uuid" : "^9.0.0"
+  },
+  "devDependencies" : {
+    "eslint" : "^8.39.0"
   }
 }
