--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5000
 
-CLIENT_URL=http://localhost:1927
+CLIENT_URL=http://127.0.0.1:1927
 
-POSTGRES_HOST=localhost
+POSTGRES_HOST=127.0.0.1
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=140781
@@ -13,4 +13,5 @@ SMTP_USER=kotlotorg.com.ua@gmail.com
 SMTP_PASSWORD=lawtiktdxgxtzfab
 
 JWT_ACCESS_SECRET=thisisverysecretaccess
+JWT_REFRESH_SECRET=andthisisrefreshsecret
 
